--- a/src/test/resources/bdd.properties
+++ b/src/test/resources/bdd.properties
@@ -1,17 +1,2 @@
-datasource.driver.name=com.mysql.cj.jdbc.Driver
-datasource.url = jdbc:mysql://<DB>:3306/testingtobreakDb
-datasource.username = admin
-datasource.password = 
 
-#end points
-create.student=/newEnrolment
-update.student=/enrolment
-get.student=/student
-delete.student=/student/delete
-
-base.uri=http://localhost:
-server.port=9191
-
-#query
-sql.students.id=SELECT * FROM testingtobreakDb.STUDENTS WHERE ID=?;
-sql.students.class=SELECT * FROM testingtobreakDb.STUDENTS WHERE CLASSNAME=?;
+test.url=http://automationpractice.com/index.php
