--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,12 +1,15 @@
 <?xml=version="1.0" encoding="UTF-8"?>
 <beans=xmlns="http://www.springframework.org/schema/beans"
 xmlns-xsi="http://www.w3.org/2001/XMLSchema-instance"
+xsi:schemaLocation="http://www.springframework.org/schema/beans
 xmlns-context="http://www.springframework.org/schema/context"
 xmlns-p="http://www.springframework.org/schema/p"
 xsi-schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans.xsd
 http=//www.springframework.org/schema/context http://www.springframework.org/schema/context/spring-context-4.0.xsd">
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 
-<bean id="propertyConfigurer" 
+<bean=id="propertyConfigurer" 
 class="org.springframework.beans.factory.config.PropertyPlaceholderConfigurer">
-<property name="bdd.properties" value="/resources/bdd.properties" />
+<property=name="bdd.properties" value="/resources/bdd.properties" />
 </bean>
+</beans>
